# fledgingr

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: check-full.yaml  check-prebuilt.yaml  pkgdown.yaml
R/: extendr-wrappers.R  fledgingr.R
man/: tokenize.Rd
reference/: index.html  tokenize.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-snapshot.R
tests/testthat/_snaps/: snapshot.md
tools/: configure.R
