[package]
name = "fledgingr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = { git = "https://github.com/yutannihilation/extendr.git", rev = "bb9e905dd1aede43387b88b28b620e8411707e24" }
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs/" }
